--- a/sub-projects/sub-app-vuejs/package.json
+++ b/sub-projects/sub-app-vuejs/package.json
@@ -12,6 +12,7 @@
   ],
   "dependencies": {
     "core-js": "^3.3.2",
+    "postcss-selector-namespace": "^3.0.1",
     "single-spa-vue": "^1.5.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
