--- a/sub-projects/sub-app-vuejs/package.json
+++ b/sub-projects/sub-app-vuejs/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve-vue": "vue-cli-service serve --port 3000",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "server-dist": "node script/http-server.js dist 3100"
   },
   "main": "dist/vue-single-spa-module.common.js",
   "files": [
@@ -12,11 +13,14 @@
   ],
   "dependencies": {
     "core-js": "^3.3.2",
+    "express": "^4.17.1",
     "postcss-selector-namespace": "^3.0.1",
     "single-spa-vue": "^1.5.2",
+    "stats-webpack-plugin": "^0.7.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "webpack-merge": "^4.2.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
